Forgot to add DOCTYPE that created error now mivong towars content

--- a/first-mini-project/content.html
+++ b/first-mini-project/content.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,6 +13,8 @@
       crossorigin="anonymous"
     />
     <link href="./content.css" rel="stylesheet" />
+     <!-- Font awsome kit -->
+     <script src="https://kit.fontawesome.com/832a2d64f5.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="container-nav">
@@ -31,9 +34,7 @@
         <a href="#">Home</a>
       </div>
        <div class="menu-cont">
-         <div class="menu"></div><br>
-         <div class="menu"></div><br>
-         <div class="menu"></div>
+         <div class="fas fa-bars menu"></div>
             <div class="drop">
                <a href="#">Home</a>
                <a href="#">Home</a>
