Fully responsive cards added

--- a/first-mini-project/content.html
+++ b/first-mini-project/content.html
@@ -84,7 +84,26 @@
         </button>
       </div>
       </div>
-      
+      <div class="container">
+        <div></div>
+        <div class="row line">
+          <div class="col-4 ele"><img src="./Images/suit-2911328_1920.jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/shirt-3737407_1920.jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/model-2911322_1920.jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/man1 (1).jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/male-3740357_1920.jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/straight-looking-2911327_1920.jpg" class="card"/></div>
+        </div>
+         <div></div>
+        <div class="row line">
+          <div class="col-4 ele"><img src="./Images/women4.jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/leyli-nova-gd0qpyteVFY-unsplash (2).jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/man1 (6).jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/women2.jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/women1.jpg" class="card"/></div>
+          <div class="col-4 ele"><img src="./Images/women3.jpg" class="card"/></div>
+        </div>
+      </div>
     </main>
 
     <!-- JavaScript Bundle with Popper -->
