Sorted peoblem of nav menu

--- a/first-mini-project/content.html
+++ b/first-mini-project/content.html
@@ -30,78 +30,119 @@
       </div>
 
       <div class="nav-bar">
-        <a href="#">MEN</a>
-        <a href="#">WOMEN</a>
-        <a href="#">KIDS</a>
+        <a href="#men">MEN</a>
+        <a href="#women">WOMEN</a>
+        <a href="./intro.html">ABOUT</a>
         <a href="#">LOGIN</a>
       </div>
       <div class="menu-cont">
         <div class="fas fa-bars menu"></div>
         <div class="drop">
-          <a href="#">MEN</a>
-          <a href="#">WOMEN</a>
-          <a href="#">KIDS</a>
+          <a href="#men">MEN</a>
+          <a href="#women">WOMEN</a>
+          <a href="./intro.html">ABOUT</a>
           <a href="#">LOGIN</a>
         </div>
       </div>
     </header>
     <main>
-
       <div class="carousel-work">
-      <div
-        id="carouselExampleControls"
-        class="carousel slide .round-corner"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active ">
-            <img src="./Images/woman-2564660_1920.jpg" class="d-block w-100 slide-img" alt="..." />
+        <div
+          id="carouselExampleControls"
+          class="carousel slide .round-corner"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="./Images/woman-2564660_1920.jpg"
+                class="d-block w-100 slide-img"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./Images/kelly-sikkema-xOUgsBNyCcc-unsplash.jpg"
+                class="d-block w-100 slide-img"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./Images/man-6079783_1920.jpg"
+                class="d-block w-100 slide-img"
+                alt="..."
+              />
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="./Images/kelly-sikkema-xOUgsBNyCcc-unsplash.jpg" class="d-block w-100 slide-img" alt="..." />
-          </div>
-          <div class="carousel-item">
-            <img src="./Images/man-6079783_1920.jpg" class="d-block w-100 slide-img" alt="..." />
-          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
       </div>
       <div class="container">
-        <div></div>
+        <div class="name" id="men">MEN</div>
         <div class="row line">
-          <div class="col-4 ele"><img src="./Images/suit-2911328_1920.jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/shirt-3737407_1920.jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/model-2911322_1920.jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/man1 (1).jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/male-3740357_1920.jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/straight-looking-2911327_1920.jpg" class="card"/></div>
+          <div class="col-4 ele">
+            <img src="./Images/suit-2911328_1920.jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img src="./Images/shirt-3737407_1920.jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img src="./Images/model-2911322_1920.jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img src="./Images/man1 (1).jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img src="./Images/male-3740357_1920.jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img
+              src="./Images/straight-looking-2911327_1920.jpg"
+              class="card"
+            />
+          </div>
         </div>
-         <div></div>
+        <div class="name" id="women">WOMEN</div>
         <div class="row line">
-          <div class="col-4 ele"><img src="./Images/women4.jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/leyli-nova-gd0qpyteVFY-unsplash (2).jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/man1 (6).jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/women2.jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/women1.jpg" class="card"/></div>
-          <div class="col-4 ele"><img src="./Images/women3.jpg" class="card"/></div>
+          <div class="col-4 ele">
+            <img src="./Images/women4.jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img
+              src="./Images/leyli-nova-gd0qpyteVFY-unsplash (2).jpg"
+              class="card"
+            />
+          </div>
+          <div class="col-4 ele">
+            <img src="./Images/man1 (6).jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img src="./Images/women2.jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img src="./Images/women1.jpg" class="card" />
+          </div>
+          <div class="col-4 ele">
+            <img src="./Images/women3.jpg" class="card" />
+          </div>
         </div>
       </div>
     </main>
