--- a/first-mini-project/intro.html
+++ b/first-mini-project/intro.html
@@ -23,7 +23,7 @@
     <!-- header navigation -->
         <div class="nav">
           <a href="./content.html">HOME</a>
-          <a href="#">ABOUT US</a>
+          <a href="./intro.html">ABOUT US</a>
           <a href="#">OUR SERVICES</a>
           <a href="#">CONTACT</a>
         </div>
