Responsive footer is added

--- a/first-mini-project/content.html
+++ b/first-mini-project/content.html
@@ -147,6 +147,19 @@
       </div>
     </main>
 
+
+    <footer>
+        <div class="footer-logo"><img src="./Images/logo2_auto_x2.jpg"><div>2021 Fashion Store Pvt Ltd<br>All rights reserved.</div></div>
+        <div class="support">For any queries, you can reach us at<br><a href="mailto : karmalkarshuham22@gmail.com">support@fashionstore.com</a></div>
+        <div class="social-media">
+          <a href="https://hi-in.facebook.com/shubham.karmalkar.7" target="_blank"><img src="./Images/facebook-4-512.png" alt="facebook" /></a> 
+            <a href="#!"><img src="/Images/twitter-4-512.png" alt="twitter" /></a>
+            <a href="#!"><img src="./Images/instagram-4-512.png" alt="instagram" /></a>
+            <a href="https://www.linkedin.com/in/shubham-karmalkar-20245218b/" target="_blank"><img src="./Images/linkedin-6-512.png" alt="linkedin" /></a>
+            <a href="https://github.com/Shubham-Karmalkar" target="_blank"><img src="./Images/github-11-512.png" alt="github" /></a>
+        </div>
+    </footer>
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
