--- a/first-mini-project/intro.html
+++ b/first-mini-project/intro.html
@@ -46,9 +46,9 @@
 
           </div>
           <div>
-            <a><img src="./Images/facebook-4-512.png" alt="instagram" /></a> 
-            <a><img src="/Images/twitter-4-512.png" alt="instagram" /></a>
-            <a><img src="./Images/instagram-4-512.png" alt="instagram" /></a>
+            <a href="#!"><img src="./Images/facebook-4-512.png" alt="instagram" /></a> 
+            <a href="#!"><img src="/Images/twitter-4-512.png" alt="instagram" /></a>
+            <a href="#!"><img src="./Images/instagram-4-512.png" alt="instagram" /></a>
           </div>
         </footer>
       </div>
