Cards with effect is done with naming

--- a/first-mini-project/content.html
+++ b/first-mini-project/content.html
@@ -19,7 +19,9 @@
       crossorigin="anonymous"
     ></script>
   </head>
+  <!-- Body -->
   <body>
+  <!-- Header with nav bar -->
     <header class="container-nav">
       <div class="brand-logo">
         <img src="./Images/logo2.jfif" alt="brand logo" class="logo-img" />
@@ -30,11 +32,16 @@
       </div>
 
       <div class="nav-bar">
-        <a href="#men">MEN</a>
-        <a href="#women">WOMEN</a>
+        <div class=".cont-table">
+    <!-- Men section      -->
+         <a href="#men">MEN</a>
+  <!-- women section -->
+        <a href="#women" >WOMEN</a>
         <a href="./intro.html">ABOUT</a>
         <a href="#">LOGIN</a>
+        </div>
       </div>
+
       <div class="menu-cont">
         <div class="fas fa-bars menu"></div>
         <div class="drop">
@@ -45,7 +52,9 @@
         </div>
       </div>
     </header>
+<!-- Main -->
     <main>
+<!-- Carousel with sliding images -->
       <div class="carousel-work">
         <div
           id="carouselExampleControls"
@@ -95,62 +104,88 @@
           </button>
         </div>
       </div>
+
+<!-- Cards of images -->
       <div class="container">
         <div class="name" id="men">MEN</div>
         <div class="row line">
           <div class="col-4 ele">
             <img src="./Images/suit-2911328_1920.jpg" class="card" />
+            <div class="card-data">Men's Formal</div>
+            <div class="heart"><i class="fas fas-b fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">30% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img src="./Images/shirt-3737407_1920.jpg" class="card" />
+            <div class="card-data">Party Wear</div>
+            <div class="heart"><i class="fas fas-b fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">60% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img src="./Images/model-2911322_1920.jpg" class="card" />
+            <div class="card-data">Jackets</div>
+            <div class="heart"><i class="fas fas-b fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">35% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img src="./Images/man1 (1).jpg" class="card" />
+            <div class="card-data">Casuals</div>
+            <div class="heart"><i class="fas fas-b fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">47% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img src="./Images/male-3740357_1920.jpg" class="card" />
+            <div class="card-data">Sweat shirt</div>
+            <div class="heart"><i class="fas fas-b fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">68% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img
               src="./Images/straight-looking-2911327_1920.jpg"
               class="card"
             />
+            <div class="card-data">Party Wear</div>
+            <div class="heart"><i class="fas fas-b fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">20% off</span></i></div>
           </div>
         </div>
         <div class="name" id="women">WOMEN</div>
         <div class="row line">
           <div class="col-4 ele">
             <img src="./Images/women4.jpg" class="card" />
+            <div class="card-data">Casual</div>
+            <div class="heart"><i class="fas fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">30% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img
               src="./Images/leyli-nova-gd0qpyteVFY-unsplash (2).jpg"
               class="card"
             />
+            <div class="card-data">Top</div>
+            <div class="heart"><i class="fas fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">56% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img src="./Images/man1 (6).jpg" class="card" />
+            <div class="card-data">Daily Use</div>
+            <div class="heart"><i class="fas fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">40% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img src="./Images/women2.jpg" class="card" />
+            <div class="card-data">Party Wear</div>
+            <div class="heart"><i class="fas fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">20% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img src="./Images/women1.jpg" class="card" />
+            <div class="card-data">Sweat Shirt</div>
+            <div class="heart"><i class="fas fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">26% off</span></i></div>
           </div>
           <div class="col-4 ele">
             <img src="./Images/women3.jpg" class="card" />
+            <div class="card-data">Hi-Fi</div>
+            <div class="heart"><i class="fas fa-heart"><span style="color: white;margin-left: 8px; display: inline-block;">45% off</span></i></div>
           </div>
         </div>
       </div>
     </main>
 
-
+<!-- footer with social media -->
     <footer>
         <div class="footer-logo"><img src="./Images/logo2_auto_x2.jpg"><div>2021 Fashion Store Pvt Ltd<br>All rights reserved.</div></div>
-        <div class="support">For any queries, you can reach us at<br><a href="mailto : karmalkarshuham22@gmail.com">support@fashionstore.com</a></div>
+        <div class="support">For any queries, you can reach us at<br><a href="mailto: karmalkarshuham22@gmail.com">support@fashionstore.com</a></div>
         <div class="social-media">
           <a href="https://hi-in.facebook.com/shubham.karmalkar.7" target="_blank"><img src="./Images/facebook-4-512.png" alt="facebook" /></a> 
             <a href="#!"><img src="/Images/twitter-4-512.png" alt="twitter" /></a>
