--- a/first-mini-project/index.html
+++ b/first-mini-project/index.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="search-bar">
-        <input type="search" class="search" />
+        <input type="search" placeholder="Search...." class="search" />
       </div>
 
       <div class="nav-bar">
