file name update had left off

--- a/first-mini-project/intro.html
+++ b/first-mini-project/intro.html
@@ -22,7 +22,7 @@
       <div class="main">
     <!-- header navigation -->
         <div class="nav">
-          <a href="./content.html">HOME</a>
+          <a href="./index.html">HOME</a>
           <a href="./intro.html">ABOUT US</a>
           <a href="#">OUR SERVICES</a>
           <a href="#">CONTACT</a>
